// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoLevels with first level selected 1`] = `
<div>
  <label>
    region
    <select
      name="state"
      onChange={[Function]}
      value="I Región"
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="I Región"
      >
        I Región
      </option>
      <option
        value="II Región"
      >
        II Región
      </option>
    </select>
  </label>
  <label>
    community
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
      <option
        value="Camiña___1150000"
      >
        Camiña
      </option>
      <option
        value="Colchane___1160000"
      >
        Colchane
      </option>
      <option
        value="Huara___1140000"
      >
        Huara
      </option>
      <option
        value="Iquique___1100000"
      >
        Iquique
      </option>
      <option
        value="Pica___1170000"
      >
        Pica
      </option>
    </select>
  </label>
</div>
`;

exports[`TwoLevels without first level selected 1`] = `
<div>
  <label>
    region
    <select
      name="state"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="I Región"
      >
        I Región
      </option>
      <option
        value="II Región"
      >
        II Región
      </option>
    </select>
  </label>
  <label>
    community
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;
